fixed issues on home page header, services overflow issue

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1066,11 +1066,6 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
 .fill-current {
   fill: currentColor;
 }
@@ -1982,6 +1977,13 @@ video {
   transition-duration: 1000ms;
 }
 
+.service-para {
+  overflow: hidden;
+  -webkit-line-clamp: 4;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
+
 .main-container {
   margin-left: auto;
   margin-right: auto;
@@ -2345,6 +2347,16 @@ video {
 
   .md\:text-left {
     text-align: left;
+  }
+
+  .md\:text-gray-50 {
+    --tw-text-opacity: 1;
+    color: rgb(249 250 251 / var(--tw-text-opacity));
+  }
+
+  .md\:text-gray-100 {
+    --tw-text-opacity: 1;
+    color: rgb(243 244 246 / var(--tw-text-opacity));
   }
 }
 
